WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187784
REGRESSION (
r233897
): CrashTracer: com.apple.WebKit.WebContent.Development at com.apple.WebKit: WKBooleanGetValue + 9
https://bugs.webkit.org/show_bug.cgi?id=187784
Summary
REGRESSION (r233897): CrashTracer: com.apple.WebKit.WebContent.Development at...
Chris Dumez
Reported
2018-07-18 14:53:08 PDT
REGRESSION (
r233897
): CrashTracer: com.apple.WebKit.WebContent.Development at com.apple.WebKit: WKBooleanGetValue + 9: 50 WebKit: WKBooleanGetValue <== 50 WebKitTestRunnerInjectedBundle: WTR::InjectedBundle::shouldProcessWorkQueue() const 50 WebKitTestRunnerInjectedBundle: WTR::InjectedBundlePage::frameDidChangeLocation(OpaqueWKBundleFrame const*) 50 WebKit: WebKit::InjectedBundlePageLoaderClient::didFinishLoadForFrame(WebKit::WebPage&, WebKit::WebFrame&, WTF::RefPtr<API::Object, WTF::DumbPtrTraits<API::Object> >&) 50 WebKit: WebKit::WebFrameLoaderClient::dispatchDidFinishLoad() 50 WebCore: WebCore::FrameLoader::checkLoadCompleteForThisFrame() 50 WebCore: WebCore::FrameLoader::checkLoadComplete() 50 WebCore: WebCore::DocumentLoader::finishedLoading() 50 WebCore: WebCore::DocumentLoader::maybeLoadEmpty() 50 WebCore: WebCore::DocumentLoader::startLoadingMainResource(WebCore::ShouldContinue) 50 WebCore: WebCore::FrameLoader::continueLoadAfterNavigationPolicy(WebCore::ResourceRequest const&, WebCore::FormState*, WebCore::ShouldContinue, WebCore::AllowNavigationToInvalidURL)::$_14::operator()() const 50 WebCore: WebCore::FrameLoader::continueLoadAfterNavigationPolicy(WebCore::ResourceRequest const&, WebCore::FormState*, WebCore::ShouldContinue, WebCore::AllowNavigationToInvalidURL) 50 WebCore: WTF::Function<void (WebCore::ResourceRequest&&, WTF::WeakPtr<WebCore::FormState>&&, WebCore::ShouldContinue)>::CallableWrapper<WebCore::FrameLoader::loadWithDocumentLoader(WebCore::DocumentLoader*, WebCore::FrameLoadType, WTF::RefPtr<WebCore::FormState, WTF::DumbPtrTraits<WebCore::FormState> >&&, WebCore::AllowNavigationToInvalidURL, WebCore::ShouldTreatAsContinuingLoad, WTF::CompletionHandler<void ()>&&)::$_9>::call(WebCore::ResourceRequest&&, WTF::WeakPtr<WebCore::FormState>&&, WebCore::ShouldContinue) 50 WebCore: WTF::Function<void (WebCore::PolicyAction)>::CallableWrapper<WebCore::PolicyChecker::checkNavigationPolicy(WebCore::ResourceRequest&&, WebCore::ResourceResponse const&, WebCore::DocumentLoader*, WTF::RefPtr<WebCore::FormState, WTF::DumbPtrTraits<WebCore::FormState> >&&, WTF::CompletionHandler<void (WebCore::ResourceRequest&&, WTF::WeakPtr<WebCore::FormState>&&, WebCore::ShouldContinue)>&&, WebCore::PolicyDecisionMode)::$_2>::call(WebCore::PolicyAction) 50 WebKit: WebKit::WebFrame::didReceivePolicyDecision(unsigned long long, WebCore::PolicyAction, unsigned long long, WebKit::DownloadID, std::optional<WebKit::WebsitePoliciesData>&&) 50 WebKit: WebKit::WebPage::didReceiveWebPageMessage(IPC::Connection&, IPC::Decoder&) 50 WebKit: IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 50 WebKit: WebKit::WebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 50 WebKit: IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 50 WebKit: IPC::Connection::dispatchOneIncomingMessage() 50 JavaScriptCore: WTF::RunLoop::performWork() 50 JavaScriptCore: WTF::RunLoop::performWork(void*) 50 CoreFoundation: __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 50 CoreFoundation: __CFRunLoopDoSource0 50 CoreFoundation: __CFRunLoopDoSources0 50 CoreFoundation: __CFRunLoopRun 50 CoreFoundation: CFRunLoopRunSpecific 50 Foundation: -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 50 Foundation: -[NSRunLoop(NSRunLoop) run] 50 libxpc.dylib: _xpc_objc_main 50 libxpc.dylib: xpc_main 50 com.apple.WebKit.WebContent.Development: 50 libdyld.dylib: start
Attachments
Patch
(2.51 KB, patch)
2018-07-18 15:04 PDT
,
Chris Dumez
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-07-18 14:53:20 PDT
<
rdar://problem/42329230
>
Chris Dumez
Comment 2
2018-07-18 15:04:15 PDT
Created
attachment 345290
[details]
Patch
Ryosuke Niwa
Comment 3
2018-07-18 16:14:05 PDT
Comment on
attachment 345290
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=345290&action=review
> Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:857 > + // The IPC failed. This happens when process swapping on navigation because the WebPageProxy unregisters itself
When process *swaps* on navigation?
Chris Dumez
Comment 4
2018-07-18 16:15:54 PDT
(In reply to Ryosuke Niwa from
comment #3
)
> Comment on
attachment 345290
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=345290&action=review
> > > Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:857 > > + // The IPC failed. This happens when process swapping on navigation because the WebPageProxy unregisters itself > > When process *swaps* on navigation?
"when process swapping on navigation" reads well to me, let's ask an American :) Brady?
Brady Eidson
Comment 5
2018-07-18 16:18:02 PDT
(In reply to Chris Dumez from
comment #4
)
> (In reply to Ryosuke Niwa from
comment #3
) > > Comment on
attachment 345290
[details]
> > Patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=345290&action=review
> > > > > Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:857 > > > + // The IPC failed. This happens when process swapping on navigation because the WebPageProxy unregisters itself > > > > When process *swaps* on navigation? > > "when process swapping on navigation" reads well to me, let's ask an > American :) Brady?
"process swapping" being a noun we've invented makes it read okay. I'd rewrite: "This happens when swapping processes on navigation..."
Brady Eidson
Comment 6
2018-07-18 16:20:26 PDT
(In reply to Brady Eidson from
comment #5
)
> (In reply to Chris Dumez from
comment #4
) > > (In reply to Ryosuke Niwa from
comment #3
) > > > Comment on
attachment 345290
[details]
> > > Patch > > > > > > View in context: > > >
https://bugs.webkit.org/attachment.cgi?id=345290&action=review
> > > > > > > Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:857 > > > > + // The IPC failed. This happens when process swapping on navigation because the WebPageProxy unregisters itself > > > > > > When process *swaps* on navigation? > > > > "when process swapping on navigation" reads well to me, let's ask an > > American :) Brady? > > "process swapping" being a noun we've invented makes it read okay.
Both a noun and a verb, but regardless it requires you to be familiar with it. My proposed rewrite doesn't:
> > I'd rewrite: "This happens when swapping processes on navigation..."
Chris Dumez
Comment 7
2018-07-18 16:33:27 PDT
Committed
r233941
: <
https://trac.webkit.org/changeset/233941
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug